--- a/app/index.html
+++ b/app/index.html
@@ -109,7 +109,7 @@
 				<div class="col-md-2">
 					<h2>Наши работы</h2>
 				</div>
-				<div class="col-md-1 col-md-offset-9">][op][op]
+				<div class="col-md-1 col-md-offset-9">
 				</div>
 			</div>
 		</div>	
