скрыл иконку телефона

--- a/app/index.html
+++ b/app/index.html
@@ -228,7 +228,7 @@
   					</div>
   					<div class="col-md-6 mail">
   						<div>mail@stepweb.ru</div><div><a href="#services">Написать письмо</a></div>
-  						<img src="img/phone.png" alt="" title="">
+  						<!-- 			<img src="img/phone.png" alt="" title=""> -->
   					</div>
   				</div>
   			</div>
