добавлены img phole & mail

--- a/app/index.html
+++ b/app/index.html
@@ -216,17 +216,12 @@
 			</div>
 			<div class="row">
 				<div class="col-md-3 col-md-offset-3 tel">
-
-					<div class="row"></div>
-
-
-
-					<div><svg class="icon icon-phone"><use xlink:href="#icon-phone"></use></svg>8 924 444-39-00</div>
+					<div><img src="img/phone.svg" alt="phone" class="icon-contact">8 924 444-39-00</div>
 					<div><a href="#services">Перезвонить вам?</a></div>
 				</div>
 				<div class="col-md-4 mail">
-					<div><svg class="icon icon-mail"><use xlink:href="#icon-mail"></use></svg>mail@stepweb.ru</div>
-					<div><a href="#services">Написать письмо</a></div>
+					<div><img src="img/mail.svg" alt="mail" class="icon-contact">mail@stepweb.ru <br></div>
+					<div> <a href="#services">Написать письмо</a></div>
 				</div>
 			</div>
 		</div>		
