--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
 	<!-- Load Main CSS Compilled without JS -->
 	<noscript>
 		<link rel="stylesheet" href="_main.min.css">
+
 	</noscript>
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -31,6 +32,7 @@
 
 	<link rel="stylesheet" type="text/css" href="libs/slick/slick.css"/>
 	<link rel="stylesheet" type="text/css" href="libs/slick/slick-theme.css"/>
+	<link rel="stylesheet" type="text/css" href="libs/owlcarousel/assets/owl.carousel.css">
 
 </head>
 
@@ -123,7 +125,7 @@
 				<div class="col-md-3">
 					<div class="s-serv-item serv-item-1">
 						<svg class="icon-serv"><use xlink:href="#icon-mobile"></use></svg>
-						<h3><strong>Разработка</strong></h3><span>Разрабатываем сайты и мобильные приложения.<p>Мы берем на себя все работы по</span> запуску продукта: от разработки концепции и покупки домена до ...
+						<h3><strong>Разработка</strong></h3><span>Разрабатываем сайты и мобильные приложения.<p>Мы берем на себя все работы позапуску продукта: от разработки концепции и покупки домена до ...</span> 
 					</div>
 				</div>
 				<div class="col-md-4 col-md-offset-1 center">
@@ -135,20 +137,19 @@
 				<div class="col-md-3 col-md-offset-1">
 					<div class="s-serv-item serv-item-3">
 						<svg class="icon-serv"><use xlink:href="#icon-medal"></use></svg>
-						<h3><strong>Продвижение</strong></h3><span>Разработаем стратегию продвижения вашего сайта.<p>Адаптируем продукт под поисковые системы, разрабатываем и проводим рекламные компании, выводим проекты в топ поисковых систем.</span>
+						<h3><strong>Продвижение</strong></h3><span>Разработаем стратегию продвижения вашего проекта.<p>Адаптируем продукт под поисковые системы, разрабатываем и проводим рекламные компании, выводим проекты в топ поисковых систем.</span>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="s-work">
+	<section class="s-work s-serv">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3">
 					<h2>Наши работы</h2>
 				</div>
-				<div class="col-md-1 col-md-offset-9">
-				</div>
+				<div class="col-md-1 col-md-offset-9"></div>
 			</div>
 		</div>	
 		<div class="slider">
@@ -156,23 +157,33 @@
 			<div class="slide">
 				<div>
 					<img src="img/work-1.jpg" height="340" width="570" alt="Наши работы">
-					Описание
+					<div class="s-serv-item work-item">
+						<h3><strong>ТРЦ «Острова»</strong></h3> Хвостохранилище, формируя аномальные геохимические ряды, поступательно. <p>В противоположность этому минеральное сырье деформирует полого-холмистый силл.
+					</div>
 				</div>
 				<div>
 					<img src="img/work-2.jpg" height="340" width="570" alt="Наши работы">
-					Описание
+					<div class="s-serv-item work-item">
+						<h3><strong>ТРЦ «Острова»</strong></h3> Хвостохранилище, формируя аномальные геохимические ряды, поступательно. <p>В противоположность этому минеральное сырье деформирует полого-холмистый силл.
+					</div>
 				</div>
 				<div>
 					<img src="img/work-3.jpg" height="340" width="570" alt="Наши работы">
-					Описание
+					<div class="s-serv-item work-item">
+						<h3><strong>ТРЦ «Острова»</strong></h3> Хвостохранилище, формируя аномальные геохимические ряды, поступательно. <p>В противоположность этому минеральное сырье деформирует полого-холмистый силл.
+					</div>
 				</div>
 				<div>
 					<img src="img/work-4.jpg" height="340" width="570" alt="Наши работы">
-					Описание
+					<div class="s-serv-item work-item">
+						
+						<h3><strong>ТРЦ «Острова»</strong></h3> Хвостохранилище, формируя аномальные геохимические ряды, поступательно. <p>В противоположность этому минеральное сырье деформирует полого-холмистый силл.
+					</div>
 				</div>
 			</div>
 		</div>	
 	</section>
+
 	<section class="s-client">
 		<div class="container">
 			<div class="row">
@@ -237,7 +248,6 @@
 				</div>
 				<div class="col-md-2 col-md-offset-1">
 					<div class="right zero">
-
 						<a href="#fb"> <svg class="icon icon-soc-seti icon-facebook2"><use xlink:href="#icon-facebook2"></use></svg></a>
 						<a href="#vk"><svg class="icon icon-soc-seti icon-vk"><use xlink:href="#icon-vk"></use></svg></a>
 						<a href="#instagram"> <svg class="icon icon-soc-seti icon-instagram"><use xlink:href="#icon-instagram"></use></svg></a>
@@ -247,7 +257,10 @@
 			</div>
 		</div>
 	</section>
-	<div class="hidden"></div> 
+
+
+
+			<div class="hidden"></div> 
 
 	<!--[if lt IE 9]>
 	<script src="libs/html5shiv/es5-shim.min.js"></script>
