--- a/app/index.html
+++ b/app/index.html
@@ -243,8 +243,15 @@
 				<div class="col-md-3">
 					<div>&copy; 2005-20016 Шаг в паутину</div>
 				</div>
-				<div class="col-md-6">
-					<div>Услуги Работы Мы Блог Контакты Кабинет</div>
+				<div class="col-md-6 center">
+					<div class="footer-nav">
+						<span><a href="#">Услуги</a></span>
+						<span><a href="#">Работы</a></span>
+						<span><a href="#">Мы</a></span>
+						<span><a href="#">Блог</a></span>
+						<span><a href="#">Контакты</a></span>
+						<span><a href="#">Кабинет</a></span>
+					</div>
 				</div>
 				<div class="col-md-2 col-md-offset-1">
 					<div class="right zero">
@@ -260,7 +267,7 @@
 
 
 
-			<div class="hidden"></div> 
+	<div class="hidden"></div> 
 
 	<!--[if lt IE 9]>
 	<script src="libs/html5shiv/es5-shim.min.js"></script>
